Fixed create event on mobile

--- a/frontend/public/assets/app/scss/layout/_event.scss
+++ b/frontend/public/assets/app/scss/layout/_event.scss
@@ -52,8 +52,8 @@
 	}
 	&__update {
 		&-file {
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
+			// display: grid;
+			// grid-template-columns: repeat(3, 1fr);
 			gap: 30px;
 			align-items: center;
 			padding: 15px 0;
@@ -65,7 +65,8 @@
 		&-thumb {
 			position: relative;
 			img {
-				width: 100%;
+				max-height: 400px;
+				max-width: 100%;
 				@include border-radius(6px);
 				border: 1px solid var(--clr-border-4);
 				@include dark {
